# fea-solver

./: README.md  package-lock.json  package.json  vercel.json
api/: analyze.js  docs.js  health.js  index.js  materials.js  mesh.js
api/jobs/: [id].js
api/jobs/[id]/: results.js
api/jobs/[id]/files/: [filename].js
compute-server/: CMakeLists.txt  Dockerfile  docker-compose.yml
compute-server/src/: main.cc
compute-server/src/api/: http_server.cc  http_server.h  json_parser.cc  json_parser.h  request_validator.cc  request_validator.h
compute-server/src/elements/: beam_element.cc  beam_element.h  shell_element.cc  shell_element.h  solid_element.cc  solid_element.h
compute-server/src/mesh/: mesh_generator.cc  mesh_generator.h  mesh_quality.cc  mesh_quality.h  mesh_reader.cc  mesh_reader.h  region_manager.cc  region_manager.h
compute-server/src/post/: linearized_stress.cc  linearized_stress.h  reaction_forces.cc  reaction_forces.h  safety_factors.cc  safety_factors.h  section_cuts.cc  section_cuts.h  strain_energy.cc  strain_energy.h  stress_calculator.cc  stress_calculator.h  vtk_output.cc  vtk_output.h
compute-server/src/solver/: boundary_conditions.cc  boundary_conditions.h  elastic_problem.cc  elastic_problem.h  material_library.cc  material_library.h
compute-server/src/solver/connections/: connection_manager.cc  constraint_base.h  mpc_constraint.cc  mpc_constraint.h  rigid_constraint.cc  rigid_constraint.h  spring_element.cc  spring_element.h
compute-server/src/solver/loads/: body_loads.cc  body_loads.h  inertial_loads.cc  inertial_loads.h  load_base.h  point_loads.cc  point_loads.h  surface_loads.cc  surface_loads.h  thermal_loads.cc  thermal_loads.h
compute-server/src/solver/material_models/: elastoplastic.cc  elastoplastic.h  hyperelastic.cc  hyperelastic.h  linear_elastic.cc  linear_elastic.h  orthotropic.cc  orthotropic.h
compute-server/src/solver/nonlinear/: line_search.cc  line_search.h  newton_raphson.cc  newton_raphson.h
compute-server/src/utils/: tensor_utils.cc  tensor_utils.h  unit_converter.cc  unit_converter.h
docs/: index.html  openapi.yaml
lib/: analyzeRequestValidation.js
shared/types/: index.ts
shared/validation/: schemas.ts
tests/: analyzeRequestValidation.test.js
tests/fixtures/: .gitkeep
tests/integration/: .gitkeep
tests/unit/: .gitkeep
tests/validation/: cantilever_beam.md  pressurized_cylinder.md
